# pzero-improves-zar

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  mecabrc
docs/: decoding.md  demo.md  evaluation.md  preprocess.md  training.md
samples/: raw.parsed.txt  raw.txt
src/: decode.py  evaluating.py  instances.py  iterators.py  loss.py  models.py  optimizers.py  preprocess.py  preprocess_check.py  preprocess_ntc.py  preprocess_with_cabocha.sh  run.py  schedulers.py  tokenizer.py  training.py  utils.py  utils_pytorch.py
src/args/: finetuning_as_params.yml  finetuning_as_pzero_params.yml  pretraining_cloze_params.yml  pretraining_pzero_params.yml
tests/: __init__.py  mock_instances.py  test_evaluating.py  test_iterators.py  test_loss.py  test_models.py  test_preprocess.py  test_schedulers.py  test_tokenizer.py  test_training.py
tests/samples/: as-pzero.instances.jsonl  as-pzero.intra.instances.jsonl  as-pzero.params.yml  as.instances.jsonl  as.intra.instances.jsonl  as.params.yml  cloze.instances.jsonl  cloze.params.yml  ntc.instances.jsonl  pzero.instances.jsonl  pzero.params.yml  raw.parsed.chunk.jsonl  raw.parsed.txt  raw.txt
tests/samples/dummy_ntc/: dummy_annotated_doc.txt
